testsuite/tests/indexed-types/should_fail/T1897b.stderr

T1897b.hs:16:1: error:
    • Couldn't match type ‘Depend a’ with ‘Depend a0’
      Expected type: t (Depend a) -> Bool
        Actual type: t (Depend a0) -> Bool
      NB: ‘Depend’ is a type function, and may not be injective
      The type variable ‘a0’ is ambiguous
    • In the ambiguity check for the inferred type for ‘isValid’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      When checking the inferred type
        isValid :: forall a (t :: * -> *).
                   (Bug a, Foldable t) =>
                   t (Depend a) -> Bool
